app/styles/wall.less
* { margin: 0; pading: 0; }

body { background-color: black; }

h1 {
  font-family: 'Lato';
  font-size: 2em;
  text-indent: 4px;
}

.screen(@url) {
    background: @url no-repeat;
    border: none;
    height: @height;
    width: @width;
    overflow: hidden;
    position: absolute;
    top:0px;
    left:0px;
}

#hallway {
  @width: 1280px;
  @height: 800px;
  .screen(url('../images/dv14-hallwall.jpg'));
}
#cinema {
  @width: 1920px;
  @height: 817px;
  margin-top: 130px;
  .screen(url('../images/dv14-cinemawall.jpg'));
}


#hallway #schedule {
  left: 40px;
}

#cinema #schedule {
  left: 240px;
}

#schedule {
    position: absolute;
    top: 0px;
    width: 780px;
    height: 100%;
    overflow: hidden;

    > div { // SideScroller

        display: table;
        overflow: hidden;
        width: 1560px;
        height: 100%;

    }

    .container {
        display: table-cell;
        vertical-align: middle;
        width: 780px;

         .border {
            > div {
                width: 756px;
                height: 82px;
                clear:both;
                margin: 9px;
                background: rgba(10,10,10,0.9);
                -webkit-border-radius: 10px;
                border: solid 1px yellow;
                -webkit-box-shadow: yellow 0 0 5px;
                overflow: hidden;
            }
         }

        .room {
            font-family: 'Lato';
            font-size: 3em;
            color: white;
            text-shadow: 2px 2px 2px #000;
            float: left;
            width: 50px;
            height: 66px;
            vertical-align: middle;
            text-align: center;
            margin-top: 10px;
        }

        .image{
            margin-top: 8px;
            img {
                width: 60px;
                height: 66px;
                float: left;
            }
        }

        .talk {
            margin-left: 120px;
            margin-right: 5px;
            font-family: 'Lato';
            font-size: 1.40em;
            font-weight: bold;
            line-height: 1.1em;
            color: white;
            float: none;
            text-shadow: 2px 2px 2px #000;

            .time {
                color: yellow;
                font-size: 0.95em;
            }

            .speaker {
                color: orange; //rgb(0,122,224);
                font-size: 0.95em;
                clear: left;
            }

        }
    }

}


#tweets {
    position: absolute;
    right: 0px;
    top: 50px;
    width: 860px;
    height: 100%;
    display: table;

    .container {
        display: table-cell;
        vertical-align: middle;
        width: 780px;

        .border {
            > div {
                width: 760px;
                height: 100px;
                clear:both;
                margin: 20px;
                margin-top: 60px;
                margin-bottom: 60px;
                background: rgba(10,10,10,.9);
                -webkit-border-radius: 10px;
                border: solid 1px yellow;
                -webkit-box-shadow: yellow 0 0 5px;

                overflow: hidden;
            }
        }

        .image{
            img {
                width: 100px;
                height: 100px;
                float: right;
            }
        }

        .tweet {
            margin-left: 5px;
            margin-right: 5px;
            font-family: 'Lato';
            font-size: 1.40em;
            font-weight: bold;
            line-height: 1.2em;
            color: white;
            float: none;
            text-shadow: 2px 2px 2px #000;

            .author {
                color: #ff4520;
                //color: orange; //rgb(0,122,224);
                font-size: 0.95em;
                clear: left;
            }

        }
    }

}

#notice {
    opacity: 0.8;
    font-family: 'lato';
    font-size: 2em;
    color: #ffffff;
    background-color: black;
    -webkit-box-shadow: 0px 0px 10px rgba(0,0,0,0.7);
    position: absolute;
    top: 10px;
    width: 100%;
    text-align: center;
}

